APB-256 fixes overflow css in admin os info on mobile

--- a/apps/admin/public/css/admin.css
+++ b/apps/admin/public/css/admin.css
@@ -714,10 +714,12 @@ ul#admin_login_nav li{
 #menu_10_process_info div:nth-child(odd){
 	width: 150px;
 	text-transform: uppercase;
+	vertical-align: top;
 }
 #menu_10_os_info div:nth-child(even),
 #menu_10_process_info div:nth-child(even){
 	width: calc(100% - 150px);
+	overflow-wrap: anywhere;
 }
 #menu_10_content_widget2{
 	height:calc(100% - 320px);
